add README and change comment

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			  	  });
 			});
 		}
-		// when the input range changes update the circle 
+		// change the data on select 
 		d3.select("#dataset").on("change", update);
 		update('data1');
 	</script>
